# degents

./: next.config.js  package-lock.json  package.json
src/app/: page.tsx
src/app/api/agent/: route.ts
src/app/api/agent/[action]/: route.ts
src/app/api/create-meme-token/: route.ts
src/app/api/generated-tokens/: route.ts
src/app/api/holdings/: route.ts
src/app/api/token-trends/: route.ts
src/app/api/trends/: route.ts
src/app/api/wallet/: route.ts
src/backend/: agent.py  app.py  llm_config.py  minimal-requirements.txt  pyproject.toml  requirements.txt  test_api.py  test_setup.py  token_trends.py  wallet_data.txt
src/backend/services/: agent_service.py  token_trend_service.py
src/components/agent/: ActivityFeed.tsx  AgentControls.tsx  FundManagement.tsx  TokenHoldings.tsx  WalletInfo.tsx
src/components/trends/: GeneratedTokens.tsx  MemeCombinations.tsx  TrendAnalysis.tsx  TrendList.tsx
src/config/: env.ts
src/hooks/: useAgent.ts  useTrends.ts
src/lib/: api.ts  utils.ts
src/lib/services/: agentService.ts  trendService.ts  twitterService.ts
src/types/: agent.ts  token.ts  trends.ts
